style: fix hovering button glitch on mobile phones

--- a/new/css/style.css
+++ b/new/css/style.css
@@ -394,12 +394,12 @@ body {
 
 .items .openButton {
 	float: left;
-	left: -200px;
+	left: -250px;
 }
 
 .items .projectLink {
 	float: right;
-	right: -200px;
+	right: -250px;
 }
 
 .items .item:hover .openButton {
